Fixed Config Form wrapping. Connected front and backend for testing. Made logo smaller.

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,12 +24,17 @@ body {
 }
 
 .img_responsive {
-  width: 5em;
+  width: 3em;
+  height: 3em;
 }
 
 #dashboard__header {
   font-size: 2em;
   color: #005c55;
+}
+
+#QL {
+  color: #2e9991;
 }
 
 #config-form__header {
@@ -52,6 +57,7 @@ body {
 .header {
   display: flex;
   flex-direction: row;
+  align-items: center;
   font-size: 2em;
 }
 
@@ -66,6 +72,7 @@ body {
   max-width: 400px;
   font-size: 14pt;
   margin: 20px;
+  background-color: rgba(0, 92, 85, 0.05);
 }
 #textbox:focus {
   outline: none;
@@ -161,7 +168,6 @@ input:checked + .slider:before {
 
 .config-form__container {
   background-color: #fff;
-  margin-top: 10px;
   margin-left: 0;
   padding-left: 0;
   border: 1px solid grey;
